--- a/index.html
+++ b/index.html
@@ -10,12 +10,80 @@
 </head>
 
 <body>
-    <p><a href="/">На главную</a></p>
+    <!-- <p><a href="/">На главную</a></p>
 
     <button type="button" class="js-target-btn">Целевая кнопка</button>
     <button type="button" class="js-add-listener">Добавить слушатель</button>
-    <button type="button" class="js-remove-listener">Снять слушатель</button>
+    <button type="button" class="js-remove-listener">Снять слушатель</button> -->
+    <!-- <p><a href="/">На главную</a></p>
 
+    Событие сабмита формы
+    <form class="js-register-form" autocomplete="off">
+        <div role="group">
+            <label>
+          Почта
+          <input type="email" name="email" />
+        </label>
+            <label>
+          Пароль
+          <input name="password" type="password" />
+        </label>
+        </div>
+
+        <br />
+        <div role="group">
+            <b>Тип подписки:</b>
+            <label>
+          <input type="radio" name="subscription" value="free" />
+          Free
+        </label>
+            <label>
+          <input type="radio" name="subscription" value="basic" />
+          Basic
+        </label>
+            <label>
+          <input type="radio" name="subscription" value="pro" />
+          Pro
+        </label>
+        </div>
+
+        <br />
+        <button type="submit">Зарегистрироваться</button>
+    </form>
+ -->
+    <!------------------------------------------------------------------------ -->
+
+    <!-- <p><a href="/">На главную</a></p>
+
+    < <form action="" autocomplete="off"> -->
+    <!-- <label>
+      Имя
+      <input type="text" class="js-input" />
+    </label>
+
+    <p>
+        <label>
+        <input type="checkbox" class="js-license" />
+        Принимаю лицензинное соглашение
+      </label>
+    </p>
+
+    <button type="submit" disabled class="js-button">
+      Зарегистрироваться как
+      <span>Аноним</span>
+    </button> -->
+
+    <!-- </form> -->
+    <!-- <p><a href="/">На главную</a></p>
+
+    <button class="js-clear">Очистить</button>
+    <p class="output js-output"></p> -->
+    <!-- ---------------------------------------------------- -->
+    <p><a href="/">На главную</a></p>
+
+    <div class="box js-box">
+        <div class="inner-box"></div>
+    </div>
     <script src="./event.js" type="module"></script>
 </body>
 
