--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Слушатели событий</title>
     <link rel="stylesheet" href="./styles.css" />
 </head>
+<style>
+    .output {
+        font-size: 24px;
+    }
+</style>
 
 <body>
     <!-- <p><a href="/">На главную</a></p>
