--- a/index.html
+++ b/index.html
@@ -2,94 +2,84 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Слушатели событий</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css" />
+    <title>Document</title>
 </head>
-<style>
-    .output {
-        font-size: 24px;
-    }
-</style>
 
 <body>
-    <!-- <p><a href="/">На главную</a></p>
 
-    <button type="button" class="js-target-btn">Целевая кнопка</button>
-    <button type="button" class="js-add-listener">Добавить слушатель</button>
-    <button type="button" class="js-remove-listener">Снять слушатель</button> -->
-    <!-- <p><a href="/">На главную</a></p>
+    <!-- <ul id="menu">
+        <li class="menu-item">home</li>
+        <li class="menu-item">about</li>
+        <li class="menu-item">gallery</li>
+        <li>blog</li>
+    </ul> -->
 
-    Событие сабмита формы
-    <form class="js-register-form" autocomplete="off">
-        <div role="group">
-            <label>
-          Почта
-          <input type="email" name="email" />
-        </label>
-            <label>
-          Пароль
-          <input name="password" type="password" />
-        </label>
+    <!-- <p id="text">This text is hidden</p>
+
+    <textarea id="message" class="materialize-textarea" cols="30" rows="5">Default textarea message</textarea>
+
+    <nav class="white center">
+        <a href="/home" class="btn">home</a>
+        <a href="/about" class="btn active">about</a>
+        <a href="/gallery" class="btn">gallery</a>
+    </nav>
+
+    <img src="https://placeimg.com/640/480/animals" alt="" class="image"></img> -->
+
+    <!-- <article class="article">
+        <h2 class="article-title">Welcome to Hawaii!</h2>
+        <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quaerat nemo veritatis quasi eius eum aliquid, nobis dolore nisi, magnam eaque iusto, necessitatibus atque laborum quam tempora ducimus dicta ipsam.</p>
+    </article> -->
+
+    <!-- <img class="image" src="https://placeimg.com/400/200/nature" alt="lake and clouds"> -->
+
+    <!-- <div class="editor">
+        <p>Donec id justo. Praesent porttitor, nulla vitae posuere iaculis, arcu nisl dignissim dolor, a pretium mi sem ut ipsum. Curabitur suscipit suscipit tellus. Phasellus gravida semper nisi.</p>
+        <div class="actions">
+            <button type="button" class="btn" data-action="save">Save</button>
+            <button type="button" class="btn" data-action="close">Close</button>
         </div>
-
-        <br />
-        <div role="group">
-            <b>Тип подписки:</b>
-            <label>
-          <input type="radio" name="subscription" value="free" />
-          Free
-        </label>
-            <label>
-          <input type="radio" name="subscription" value="basic" />
-          Basic
-        </label>
-            <label>
-          <input type="radio" name="subscription" value="pro" />
-          Pro
-        </label>
-        </div>
-
-        <br />
-        <button type="submit">Зарегистрироваться</button>
-    </form>
- -->
-    <!------------------------------------------------------------------------ -->
-
-    <!-- <p><a href="/">На главную</a></p>
-
-    < <form action="" autocomplete="off"> -->
-    <!-- <label>
-      Имя
-      <input type="text" class="js-input" />
-    </label>
-
-    <p>
-        <label>
-        <input type="checkbox" class="js-license" />
-        Принимаю лицензинное соглашение
-      </label>
-    </p>
-
-    <button type="submit" disabled class="js-button">
-      Зарегистрироваться как
-      <span>Аноним</span>
-    </button> -->
-
-    <!-- </form> -->
-    <!-- <p><a href="/">На главную</a></p>
-
-    <button class="js-clear">Очистить</button>
-    <p class="output js-output"></p> -->
-    <!-- ---------------------------------------------------- -->
-    <p><a href="/">На главную</a></p>
-
-    <div class="box js-box">
-        <div class="inner-box"></div>
     </div>
-    <script src="./event.js" type="module"></script>
+
+    <ul class="dishes">
+        <li data-id="14">Baked Yak &amp; Mushrooms</li>
+        <li data-id="7">Strawberry Pancakes</li>
+        <li data-id="3">Caramel Toffee</li>
+        <li data-id="61">Pistachio Elderberry Wafer</li>
+    </ul> -->
+
+    <!-- <div class="container center">
+        <nav class="nav white">
+            <a href="#" class="btn">item 1</a>
+            <a href="#" class="btn">item 2</a>
+            <a href="#" class="btn">item 3</a>
+        </nav>
+    </div> -->
+
+    <!-- <div class="container">
+        <ul class="list">
+            <li>Mango</li>
+        </ul>
+    </div> -->
+
+    <!-- <article class="article">
+        <h2 class="title">Article title</h2>
+        <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, ipsa quibusdam! Praesentium accusantium fugiat distinctio quidem minima fugit eos, veniam, nam laboriosam deleniti nisi qui neque explicabo perspiciatis, consectetur non.</p>
+        <a class="link" href="">Read more</a>
+    </article> -->
+
+    <div class="parent">
+        <article class="article">
+            <h2>Article title</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, natus unde enim deleniti quod amet tempore officia, possimus non iure vitae quasi reiciendis!</p>
+        </article>
+    </div>
+
+    <script src="index.js" type="module"></script>
 </body>
 
 </html>
