--- a/index.html
+++ b/index.html
@@ -72,12 +72,23 @@
         <a class="link" href="">Read more</a>
     </article> -->
 
-    <div class="parent">
+    <!-- <div class="parent">
         <article class="article">
             <h2>Article title</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, natus unde enim deleniti quod amet tempore officia, possimus non iure vitae quasi reiciendis!</p>
         </article>
-    </div>
+    </div> -->
+
+    <article class="article">
+        <h2>Article title</h2>
+    </article>
+
+    <hr>
+
+    <section>
+        <h2>Latest Technologies</h2>
+        <ul class="list"></ul>
+    </section>
 
     <script src="index.js" type="module"></script>
 </body>
