--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </article>
     </div> -->
 
-    <article class="article">
+    <!-- <article class="article">
         <h2>Article title</h2>
     </article>
 
@@ -88,7 +88,48 @@
     <section>
         <h2>Latest Technologies</h2>
         <ul class="list"></ul>
-    </section>
+    </section> -->
+
+    <!-- <ol id="list">
+        <li>0</li>
+        <li>1</li>
+        <li>2</li>
+    </ol> -->
+
+    <!-- task 1 -->
+
+    <ul id="categories">
+        <li class="item">
+            <h2>Животные</h2>
+
+            <ul>
+                <li>Кот</li>
+                <li>Хомяк</li>
+                <li>Лошадь</li>
+                <li>Попугай</li>
+            </ul>
+        </li>
+        <li class="item">
+            <h2>Продукты</h2>
+
+            <ul>
+                <li>Хлеб</li>
+                <li>Петрушка</li>
+                <li>Творог</li>
+            </ul>
+        </li>
+        <li class="item">
+            <h2>Технологии</h2>
+
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Node</li>
+            </ul>
+        </li>
+    </ul>
 
     <script src="index.js" type="module"></script>
 </body>
