--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <!-- task 1 -->
 
-    <ul id="categories">
+    <!-- <ul id="categories">
         <li class="item">
             <h2>Животные</h2>
 
@@ -129,7 +129,11 @@
                 <li>Node</li>
             </ul>
         </li>
-    </ul>
+    </ul> -->
+
+    <!-- Task - 2 -->
+
+    <ul id="ingredients"></ul>
 
     <script src="index.js" type="module"></script>
 </body>
