--- a/index.html
+++ b/index.html
@@ -133,7 +133,24 @@
 
     <!-- Task - 2 -->
 
-    <ul id="ingredients"></ul>
+    <!-- <ul id="ingredients"></ul> -->
+
+    <!-- Task - 3 -->
+
+    <!-- <ul id="gallery"></ul> -->
+
+    <!-- События -->
+
+    <!-- <button id="single" class="btn">SINGLE CALLBACK</button>
+    <hr>
+    <button id="multiple" class="btn">MULTIPLE CALLBACKS</button> -->
+
+    <button class="btn" data-action="add">Add Listener</button>
+    <button class="btn" data-action="remove">Remove Listener</button>
+    <hr>
+    <button id="btn" class="btn">CLICK ME!</button>
+
+    <!-- Task - 4 -->
 
     <script src="index.js" type="module"></script>
 </body>
