--- a/index.html
+++ b/index.html
@@ -145,11 +145,27 @@
     <hr>
     <button id="multiple" class="btn">MULTIPLE CALLBACKS</button> -->
 
-    <button class="btn" data-action="add">Add Listener</button>
+    <!-- <button class="btn" data-action="add">Add Listener</button>
     <button class="btn" data-action="remove">Remove Listener</button>
     <hr>
-    <button id="btn" class="btn">CLICK ME!</button>
+    <button id="btn" class="btn">CLICK ME!</button> -->
 
+    <!-- <button id="btn" class="btn">CLICK ME!</button> -->
+
+    <!-- Событие формы -->
+
+    <!-- <form class="form">
+        <input type="text" placeholder="Login">
+        <input type="password" placeholder="Password">
+        <button class="btn" type="submit">Зарегистрироваться</button>
+    </form> -->
+
+    <!-- Событие клавиатуры -->
+    <div class="container">
+        <button type="button" data-action="clear">Clear Input</button>
+
+        <div class="log-list"></div>
+    </div>
     <!-- Task - 4 -->
 
     <script src="index.js" type="module"></script>
